--- a/package.json
+++ b/package.json
@@ -22,13 +22,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "tsc": "tsc --noEmit",
+    "lint:js": "eslint \"src/**/*.{ts,tsx,js,jsx}\" --max-warnings=0 --cache --color",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx,js,jsx}\" --max-warnings=0 --fix --color"
   },
   "browserslist": {
     "production": [
@@ -43,9 +40,26 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^8.57.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^11.12.0",
+    "husky": "^9.0.11",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
     "sass": "^1.72.0",
+    "typescript-eslint": "^7.7.0",
     "typescript-plugin-css-modules": "^5.1.0"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "npm run lint:js"
+    ]
   }
 }
