--- a/package.json
+++ b/package.json
@@ -47,9 +47,14 @@
     "@eslint/js": "^8.57.0",
     "@types/lodash": "^4.17.0",
     "@types/styled-system": "^5.1.22",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^25.7.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "globals": "^11.12.0",
