--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@floating-ui/react": "^0.26.15",
+    "@hookform/resolvers": "^3.4.2",
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.2.4",
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,6 +19,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
@@ -26,7 +28,9 @@
     "styled-components": "^6.1.8",
     "styled-system": "^5.1.5",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yap": "^0.0.2",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start ",
@@ -51,6 +55,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
+    "@hookform/devtools": "^4.3.1",
     "@types/lodash": "^4.17.0",
     "@types/styled-system": "^5.1.22",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
