--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
@@ -29,7 +30,6 @@
     "styled-system": "^5.1.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "yap": "^0.0.2",
     "yup": "^1.4.0"
   },
   "scripts": {
